# spamscanner-rust

./: Cargo.toml
src/: main.rs  model.json  spam.rs  token.rs
tests/: test.rs
