[package]
name = "spamscanner-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mail-parser = "0.9.1"
ip_network = "0.4.1"
bayespam = "1.1.0"
anyhow = "1.0.75"
thiserror = "1.0.49"